# fastapi_project_template

./: Makefile  README.md  cookiecutter.pre.json  cookiecutter.pre.json.template  copier.yml  docker-compose.yml  extensions.py  hexproject.yaml  manifest.yml  pyproject.toml  pyproject_template.toml
env/: bastion.env  default.env  docker.env  local.env
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
infra/tf/aws/environment/: main.tf  output.tf  variables.tf
infra/tf/aws/shared/: main.tf
src/: conftest.py
src/app/: config.py
src/app/adaptor/db/nosql/: __init__.py
src/app/adaptor/db/nosql/models/: example.py
src/app/adaptor/db/sql/: __init__.py
src/app/adaptor/db/{% if use_db_logic == "nosql"  %}nosql{% endif %}/models/: base_model.py
src/app/adaptor/storage/: adaptor.py
src/app/adaptor/{% if use_db %}db{% endif %}/sql/: uow.py
src/app/adaptor/{% if use_db %}db{% endif %}/sql/models/: example.py
src/app/adaptor/{% if use_db %}db{% endif %}/{% if use_db_logic == "nosql"  %}nosql{% endif %}/: uow.py
src/app/adaptor/{% if use_db %}db{% endif %}/{% if use_db_logic == "sql"  %}sql{% endif %}/alembic/: env.py
src/app/domain/: example.py
src/app/interactor/: dependencies.py
src/app/interactor/api/: __init__.py
src/app/interactor/api/fastapi/api_versions/: __init__.py
src/app/interactor/api/fastapi/api_versions/api_v1/: api.py
src/app/interactor/api/ninja/main/: asgi.py  urls.py  wsgi.py
src/app/interactor/cli/: create_dynamo_tables.py
src/app/interactor/event/: __init__.py  lambda_app.py  lambda_handler.py
src/app/interactor/event/tasks/: serverless_tasks.py
src/app/interactor/{% if use_api %}api{% endif %}/: lambda_wrapper.py
src/app/interactor/{% if use_api %}api{% endif %}/fastapi/: main.py
src/app/interactor/{% if use_api %}api{% endif %}/ninja/: manage.py
src/app/interactor/{% if use_api %}api{% endif %}/ninja/main/: settings.py
src/app/interactor/{% if use_task %}event{% endif %}/: celery.py
src/app/interactor/{% if use_task %}event{% endif %}/tasks/: app.py  celery_tasks.py  serverless_tasks.py
src/app/interactor/{% if use_task %}task{% endif %}/: lambda_handler.py
src/app/tests/adaptor/sql/: conftest.py
src/app/tests/interactor/api/fastapi/: test_example.py  test_healthcheck.py
src/tests/adaptor/sql/: conftest.py  test_migrations.py
src/tests/interactor/api/fastapi/: test_crud.py  test_example.py
(+3 files in other folders)
