[project]
authors = [
    {name = "{{full_name}}", email = "{{email}}"},
]
requires-python = "<4.0,>=3.12"
name = "{{project_slug}}"
version = "{{version}}"
description = "{{description}}"
readme = "README.md"
dependencies = [
    {% if use_api %}
    "fastapi<1.0.0,>=0.115.3",
    "itsdangerous>=2.2.0",
    "uvicorn<1.0.0,>=0.32.0",
    "gevent<25.0.0,>=24.10.3",
    {% endif %}
    "requests<3.0.0,>=2.32.3",
    "python-dotenv<2.0.0,>=1.0.1",
    "pydantic-settings<3.0.0,>=2.6.0",
    {% if use_db and use_db_logic == 'sql' %}
    "alembic<2.0.0,>=1.13.3",
    "sqlalchemy-continuum>=1.4.2",
    "psycopg[binary]==3.2.6",
    {% elif use_db and use_db_logic == 'nosql' %}
    "pymongo>=4.10.1",
    {% endif %}
    {% if use_storage %}
    "sentry-sdk[fastapi]>=2.25.1",
    "hexrepo-cloud",
    {% endif %}
    {% if use_db %}
    "hexrepo-db",
    {% endif %}
    {% if use_api %}
    "hexrepo-api",
    {% endif %}
    {% if use_task %}
    "hexrepo-task",
    {% endif %}
    "hexrepo-log",
]

[dependency-groups]
aws = [
    "mangum<1.0.0,>=0.19.0",
    "aws-xray-sdk>=2.14.0",
    "boto3<2.0.0,>=1.35.66",
    "boto3-stubs[essential]<2.0.0,>=1.35.86",
]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "mypy<2.0.0,>=1.13.0",
    "ruff>=0.8.4",
    "httpx<1.0.0,>=0.27.2",
    "pytest-alembic>=0.11.1",
    "pytest-dotenv<1.0.0,>=0.5.2",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest-xdist<4.0.0,>=3.6.1",
    "polyfactory<3.0.0,>=2.17.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "-vv --cov --cov-report xml --cov-report term-missing --cov-fail-under=50"
testpaths = ["app/tests"]
env_files = ["env/local.env"]
pythonpath = [
  "src"
]

[tool.coverage.run]
concurrency = ["thread"]
omit = ["app/tests/*"]
source = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.uv.sources]
{% if use_api %}
hexrepo-api = { path = "../../libs/api", editable = true }
{% endif %}
{% if use_db %}
hexrepo-db = { path = "../../libs/db", editable = true }
{% endif %}
{% if use_storage %}
hexrepo-cloud = { path = "../../libs/cloud", editable = true }
{% endif %}
{% if use_task %}
hexrepo-task = { path = "../../libs/task", editable = true }
{% endif %}
hexrepo-log = { path = "../../libs/log", editable = true }